--- a/css/style.css
+++ b/css/style.css
@@ -150,9 +150,18 @@ img.disco{
     border-radius: 50%
 }
 
-.video video{
+.video {
     width: 100%;
     border-radius:  15px;
+}
+
+iframe {
+    width:100%;
+    height:644px;
+}
+
+.video-iframe {
+    border-radius: 15px;
 }
 
 
@@ -281,6 +290,11 @@ footer {
     .carousel-caption {
         display: none;
     }
+
+    iframe {
+        width:100%;
+        height: 100%;
+    }
 }
 
 
@@ -307,6 +321,12 @@ footer {
 
     .carousel-caption {
         display: none;
+    }
+    
+    /* MULTIMEDIA */
+    iframe {
+        width:100%;
+        height: 250px;
     }
 }
 
@@ -364,6 +384,12 @@ footer {
     .col-multimedia{
         height: 350px
     }
+
+    iframe {
+        width:100%;
+        height: 408px;
+    }
+    
 }
 
 
@@ -402,6 +428,12 @@ footer {
     .text-acercade1{
         padding:37px;
     }
+
+    /*Multimedia*/
+    iframe {
+        width:100%;
+        height: 530px;
+    }
 }
 
 
@@ -409,4 +441,9 @@ footer {
 
 @media only screen and (min-width: 1200px) {
     
+    /*Multimedia*/
+    iframe {
+        width:100%;
+        height: 630px;
+    }
 }
