--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,8 @@ label {
 /* INICIO PAGINA DE MULTIMEDIA */
 
 .multimedia {
-    background: black url(../images/logo.png) repeat;
+    /*background: black url(../images/logo.png) repeat;*/
+    background-color: #2C2617;
 }
 
 .col-multimedia{
