--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,6 @@ label {
 /* INICIO PAGINA DE MULTIMEDIA */
 
 .multimedia {
-    /*background: black url(../images/logo.png) repeat;*/
     background-color: #2C2617;
 }
 
@@ -397,6 +396,10 @@ footer {
 /* Medium Devices, Desktops */
 
 @media only screen and (min-width: 992px) {
+    .multimedia {
+        background: black url(../images/logo.png) repeat;
+    }
+
     .info {
         padding: 50px;
     }
