--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ footer {
 
     /*CONTACTO*/
     .info-contacto{
-        padding:100px 45px;
+        padding:0;
     }
 }
 
@@ -342,7 +342,7 @@ footer {
 
     /*CONTACTO*/
     .info-contacto{
-        padding:100px 45px;
+        padding:0;
     }
 }
 
