--- a/css/style.css
+++ b/css/style.css
@@ -297,9 +297,14 @@ footer {
         display: none;
     }
 
+    /*MULTIMEDIA*/
     iframe {
         width:100%;
         height: 100%;
+    }
+    
+    iframe .audio-playlist{
+        width: 100%;
     }
 
     /*CONTACTO*/
@@ -338,6 +343,10 @@ footer {
     iframe {
         width:100%;
         height: 250px;
+    }
+
+    iframe .audio-playlist{
+        width: 100%;
     }
 
     /*CONTACTO*/
@@ -400,11 +409,16 @@ footer {
     .col-multimedia{
         height: 350px
     }
-
+    
     iframe {
         width:100%;
         height: 408px;
     }
+
+    iframe .audio-playlist{
+        width: 100%;
+    }
+
 
     /*CONTACTO*/
     .info-contacto{
@@ -459,6 +473,11 @@ footer {
         width:100%;
         height: 530px;
     }
+
+    iframe .audio-playlist{
+        width: 100%;
+    }
+
 }
 
 
@@ -471,4 +490,9 @@ footer {
         width:100%;
         height: 630px;
     }
+
+    iframe .audio-playlist{
+        width: 100%;
+    }
+
 }
