Se realizan cambios en el index.html, se modican los estilos de los eventos, se agrega el robot de busqueda, se agrega un archivo de optimización, se remueve la images/korales.png, se agrega un lib/html5-3.6-respond-1.4.2.min.js para paginas con un explorador menor a internet explorer 9

--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,11 @@ iframe {
     margin:50px;
 }
 
+.info-evento p{
+    color:white;
+}
+
+
 /* FOOTER ALL PAGES */ 
 footer {
     text-align: right;
