se modifica uno de los eventos en la pagina de index.html y se agregan estilos

--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,10 @@ iframe {
 
 /* -------------- INDEX ------------------*/
 
+ol li {
+    color:white;
+}
+
 .text-eventos {
     color: white;
     font-weight: bold;
