--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,7 @@ footer {
         margin: -10% auto;
     }
     .info-evento {
-        margin: 0px;
+        margin: 0px auto;
         height: 350px;
     }
     .img-ubicacion1 {
@@ -465,6 +465,10 @@ footer {
     /*CONTACTO*/
     .info-contacto {
         padding: 100px 45px;
+    }
+
+    .info-evento{
+        height: 431px;
     }
 }
 
