--- a/css/style.css
+++ b/css/style.css
@@ -469,6 +469,8 @@ footer {
     iframe {
         width: 100%;
         height: 408px;
+        margin: 10px 0;
+        border-radius: 10px;
     }
     iframe .audio-playlist {
         width: 100%;
@@ -552,7 +554,9 @@ footer {
     /*Multimedia*/
     iframe {
         width: 100%;
-        height: 530px;
+        height: 460px;
+        margin: 10px 0;
+        border-radius: 10px;
     }
     iframe .audio-playlist {
         width: 100%;
@@ -571,8 +575,10 @@ footer {
 @media only screen and (min-width: 1200px) {
     /*Multimedia*/
     iframe {
+        margin:10px 0;
         width: 100%;
-        height: 630px;
+        height: 458px;
+        border-radius: 10px;
     }
 
     iframe .audio-playlist {
