se cambia el color de la letra de los botones de facebook me gusta y compartir.

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,11 @@ label {
     color: white;
 }
 
+/* información del boton me gusta de la pagina */
+div > span {
+    color:white;
+}
+
 
 /* INICIO PAGINA DE ACERCA DE */
 
