modificación de los botones de me gusta y compartir de facebook

--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,8 @@ label {
 }
 
 /* información del boton me gusta de la pagina */
-div > span {
-    color:white;
+._51mz {
+    color: white;
 }
 
 
