--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,8 @@ label {
     color: white;
 }
 
-/* información del boton me gusta de la pagina 
+/* información del boton me gusta de la pagina */
 ._51mx:last-child>._51m- {
-    color: white !important;
-}
-*/
-._51mx {
     color: white !important;
 }
 
